final changes for comments

--- a/notebook_final.ipynb
+++ b/notebook_final.ipynb
@@ -35860,11 +35860,11 @@
     "        weights = AlexNet_Weights.DEFAULT if pretrained else None\n",
     "        self.model = alexnet(weights=weights)\n",
     "\n",
-    "        # Replace final classifier layer to match your classes\n",
+    "        # final fully connected layer\n",
     "        in_features = self.model.classifier[-1].in_features\n",
     "        self.model.classifier[-1] = nn.Linear(in_features, num_classes) \n",
     "\n",
-    "        # feature extraction mode (train only classifier)\n",
+    "        # # optional feature-extraction mode: freeze convolutional layers so only the classifier is trained\n",
     "        if freeze_features:\n",
     "            for p in self.model.features.parameters():\n",
     "                p.requires_grad = False\n",
@@ -36612,7 +36612,7 @@
     "        # final fully connected layer\n",
     "        self.model.fc = nn.Linear(self.model.fc.in_features, num_classes)\n",
     "\n",
-    "        # Disable auxiliary heads\n",
+    "        # Disable auxiliary classifiers so the model outputs a single prediction head\n",
     "        self.model.aux1 = None\n",
     "        self.model.aux2 = None\n",
     "        self.model.aux_logits = False\n",
@@ -38348,7 +38348,7 @@
     }
    ],
    "source": [
-    "# visualisation the age distribution to guide the selection of age groups\n",
+    "# visualisation of the age distribution to guide the selection of age groups\n",
     "df_combined.age.value_counts().sort_index().plot(kind='bar', figsize=(10, 4))"
    ]
   },
@@ -38418,7 +38418,8 @@
     "\n",
     "    if len(gdf) < 20:\n",
     "        continue\n",
-    "\n",
+    "    \n",
+    "    # Stack predicted class probabilities\n",
     "    preds = np.stack([gdf[col] for col in class_columns]).T\n",
     "    targets = np.array(gdf['target'])\n",
     "\n",
@@ -38436,6 +38437,7 @@
     "        fpr, tpr, _ = roc_curve(y, preds[:, k])\n",
     "        aucs.append(auc(fpr, tpr))\n",
     "\n",
+    "        # Interpolate TPR onto common grid for macro averaging\n",
     "        tpr_interp = np.interp(fpr_grid, fpr, tpr)\n",
     "        tprs.append(tpr_interp)\n",
     "\n",
@@ -38503,11 +38505,13 @@
     "\n",
     "roc_results = {}\n",
     "\n",
+    "# Compute macro-averaged ROC curves separately for each cancer group\n",
     "for group, gdf in df_combined.groupby(\"cancer\"):\n",
     "\n",
     "    if len(gdf) < 20:\n",
     "        continue\n",
     "    \n",
+    "    # Stack predicted class probabilities\n",
     "    preds = np.stack([gdf[col] for col in class_columns]).T\n",
     "    targets = np.array(gdf['target'])\n",
     "\n",
@@ -38515,6 +38519,7 @@
     "    tprs = []\n",
     "    aucs = []\n",
     "\n",
+    "    # Compute ROC for each class\n",
     "    for k in range(C):\n",
     "        y = (targets == k).astype(int)\n",
     "\n",
@@ -38524,6 +38529,7 @@
     "        fpr, tpr, _ = roc_curve(y, preds[:, k])\n",
     "        aucs.append(auc(fpr, tpr))\n",
     "\n",
+    "        # Interpolate TPR onto common grid for macro averaging\n",
     "        tpr_interp = np.interp(fpr_grid, fpr, tpr)\n",
     "        tprs.append(tpr_interp)\n",
     "\n",
@@ -39299,7 +39305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The commented lines show an alternative dimension non-linear reduction t-SNE. The same visualization pipeline was reused, and only the projection coordinates were changed."
+    "The commented lines show an alternative non-linear dimension reduction t-SNE. The same visualization pipeline was reused, and only the projection coordinates were changed."
    ]
   },
   {
